--- a/Readme
+++ b/Readme
@@ -3,4 +3,5 @@ This script is a shitty code, and not productionised at all (Neither do I have a
 fwiw, the index.js contains a method -> populateAllActiveUsers
     - this creates a json file (cfusers.json) which is further used to query all the users who have been actively participating in the contests
 
-getAllEligibleProblems is the function which needs to be called to populate the problems! 
+getAllEligibleProblems() is the function which needs to be called to populate the problems! 
+    - this funcion supports resuming processing from a given checkpoint to avoid recomputation.
